# lazycat-terminal

./: KEYBOARD_SHORTCUTS.md  PKGBUILD  PROCESS_DETECTION_TEST.md  README.md  README.zh-CN.md  SEARCH_FEATURE.md  config.conf  meson.build
src/: config_manager.vala  confirm_dialog.vala  context_menu.vala  main.vala  port_forward_panel.vala  settings_dialog.vala  shadow_window.vala  ssh_forwarder.vala  tab_bar.vala  terminal_tab.vala  window.vala
theme/: xterm
